Fix broken CSS in link control

--- a/css/editor.scss
+++ b/css/editor.scss
@@ -31,7 +31,7 @@
 }
 
 .hm-link-control {
-	.blocks-url-input input {
+	.editor-url-input input {
 		border: 1px solid #ddd;
 		box-shadow: inset 0 1px 2px rgba( 0, 0, 0, 0.07 );
 		background-color: #fff;
@@ -39,6 +39,7 @@
 		outline: none;
 		transition: 0.05s border-color ease-in-out;
 		padding: 6px 8px;
+		max-width: 100%;
 
 		&:focus {
 			border-color: #5b9dd9;
